--- a/Fake News Detection.ipynb
+++ b/Fake News Detection.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/bhoomipuri/bhoomipuri/blob/main/Fake%20News%20Detection.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 3,
       "id": "14c00318-a72b-42b0-99c9-a8d88935fa3c",
@@ -37,6 +47,14 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "-SDVBImUZzjr"
+      },
+      "id": "-SDVBImUZzjr"
     },
     {
       "cell_type": "code",
@@ -1301,6 +1319,73 @@
         "filename = 'vectorizer.pkl'\n",
         "pickle.dump(vector , open(filename , 'wb'))"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "from flask import Flask, request, render_template\n",
+        "import pickle\n",
+        "\n",
+        "\n",
+        "vector = pickle.load(open(\"/content/vectorizer.pkl\", 'rb'))\n",
+        "model = pickle.load(open(\"/content/finelized_model.pkl\", 'rb'))\n",
+        "\n",
+        "app = Flask(__name__)\n",
+        "\n",
+        "@app.route('/')\n",
+        "def home():\n",
+        "    return render_template(\"/content/index.html\")\n",
+        "\n",
+        "@app.route('/prediction', methods=['GET', 'POST'])\n",
+        "def prediction():\n",
+        "    if request.method == \"POST\":\n",
+        "        news = str(request.form['news'])\n",
+        "\n",
+        "        predict = model.predict(vector.transform([news]))[0]\n",
+        "        print(predict)\n",
+        "\n",
+        "        return render_template(\"/content/prediction.html\", prediction_text=\"News headline is -> {}\".format(predict))\n",
+        "\n",
+        "\n",
+        "    else:\n",
+        "        return render_template(\"/content/prediction.html\")\n",
+        "\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    app.debug = True\n",
+        "    app.run()\n",
+        ""
+      ],
+      "metadata": {
+        "id": "5P1mOgzFZ8Qn",
+        "outputId": "25c3dcab-aa1b-4404-8d01-466e5cfc9994",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "5P1mOgzFZ8Qn",
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " * Serving Flask app '__main__'\n",
+            " * Debug mode: on\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "INFO:werkzeug:\u001b[31m\u001b[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\u001b[0m\n",
+            " * Running on http://127.0.0.1:5000\n",
+            "INFO:werkzeug:\u001b[33mPress CTRL+C to quit\u001b[0m\n",
+            "INFO:werkzeug: * Restarting with stat\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
@@ -1322,7 +1407,8 @@
       "version": "3.12.2"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
