--- a/Fake News Detection.ipynb
+++ b/Fake News Detection.ipynb
@@ -1,16 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/bhoomipuri/bhoomipuri/blob/main/Fake%20News%20Detection.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 3,
       "id": "14c00318-a72b-42b0-99c9-a8d88935fa3c",
@@ -1323,61 +1313,74 @@
     {
       "cell_type": "code",
       "source": [
+        "!pip install flask-ngrok"
+      ],
+      "metadata": {
+        "id": "ifkLkn1EhUOw"
+      },
+      "id": "ifkLkn1EhUOw",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "\n",
         "from flask import Flask, request, render_template\n",
+        "from flask_ngrok import run_with_ngrok\n",
         "import pickle\n",
         "\n",
-        "\n",
+        "# Load the vectorizer and model\n",
         "vector = pickle.load(open(\"/content/vectorizer.pkl\", 'rb'))\n",
         "model = pickle.load(open(\"/content/finelized_model.pkl\", 'rb'))\n",
         "\n",
-        "app = Flask(__name__)\n",
+        "app = Flask(_name_)\n",
+        "run_with_ngrok(app)  # Enable Ngrok to expose the Flask app\n",
         "\n",
         "@app.route('/')\n",
         "def home():\n",
+        "    # Flask looks for templates in the 'templates' folder\n",
         "    return render_template(\"/content/index.html\")\n",
         "\n",
         "@app.route('/prediction', methods=['GET', 'POST'])\n",
         "def prediction():\n",
         "    if request.method == \"POST\":\n",
         "        news = str(request.form['news'])\n",
-        "\n",
         "        predict = model.predict(vector.transform([news]))[0]\n",
-        "        print(predict)\n",
-        "\n",
-        "        return render_template(\"/content/prediction.html\", prediction_text=\"News headline is -> {}\".format(predict))\n",
-        "\n",
-        "\n",
+        "        return render_template(\"/content/prediction.html\", prediction_text=f\"News headline is -> {predict}\")\n",
         "    else:\n",
         "        return render_template(\"/content/prediction.html\")\n",
         "\n",
-        "\n",
-        "if __name__ == '__main__':\n",
-        "    app.debug = True\n",
-        "    app.run()\n",
-        ""
+        "if _name_ == '_main_':\n",
+        "    app.run()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5P1mOgzFZ8Qn",
-        "outputId": "25c3dcab-aa1b-4404-8d01-466e5cfc9994"
+        "outputId": "f2a0f271-d17e-44fb-eae7-83911809a3bb"
       },
       "id": "5P1mOgzFZ8Qn",
       "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
+          "metadata": {
+            "tags": null
+          },
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             " * Serving Flask app '__main__'\n",
             " * Debug mode: on\n"
           ]
         },
         {
-          "output_type": "stream",
+          "metadata": {
+            "tags": null
+          },
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "INFO:werkzeug:\u001b[31m\u001b[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\u001b[0m\n",
             " * Running on http://127.0.0.1:5000\n",
@@ -1407,8 +1410,7 @@
       "version": "3.12.2"
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "nbformat": 4,
