--- a/Fake News Detection.ipynb
+++ b/Fake News Detection.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/bhoomipuri/bhoomipuri/blob/main/Fake%20News%20Detection.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 3,
       "id": "14c00318-a72b-42b0-99c9-a8d88935fa3c",
@@ -1359,7 +1369,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5P1mOgzFZ8Qn",
-        "outputId": "f2a0f271-d17e-44fb-eae7-83911809a3bb"
+        "outputId": "12495114-01c5-4fe0-96b0-177c38336c26"
       },
       "id": "5P1mOgzFZ8Qn",
       "execution_count": null,
@@ -1410,7 +1420,8 @@
       "version": "3.12.2"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
